# battery-pack-designer

./: .gitignore  README.md  battery_pack_designer.spec  desktop_main.py  pyproject.toml  requirements.txt
src/battery_pack_designer/: __init__.py  cell_library.py  models.py  planner.py
src/battery_pack_designer/desktop/: app.py
src/battery_pack_designer/static/: app.css  app.js
src/battery_pack_designer/templates/: index.html
src/battery_pack_designer/web/: app.py
tests/: test_planner.py  test_web_app.py
