[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-pack-designer"
version = "0.1.2"
description = "Battery pack layout, routing, tab-strip, and weld-step planner for cylindrical cells."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "Flask>=3.0,<4.0",
  "PySide6>=6.7,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[project.scripts]
bpd-web = "battery_pack_designer.web.app:main"
bpd-desktop = "battery_pack_designer.desktop.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
battery_pack_designer = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
